# _HW_10

./: pyproject.toml
hw_10/: db.sqlite3
hw_10/hw_10/: settings.py  urls.py
hw_10/quotes/: models.py  urls.py  views.py
hw_10/quotes/migrations/: 0001_initial.py
hw_10/quotes/static/quotes/: style.css
hw_10/quotes/templates/quotes/: base.html  home.html  index.html
hw_10/quotes/templatetags/: extract.py
hw_10/users/: forms.py  urls.py  views.py
hw_10/users/templates/users/: create.html  login.html  register.html
hw_10/utils/: add_quotes_to_mongo.py  migration.py
